[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://StressDemands.gd" type="Script" id=2]

[node name="StressDemands" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 352.0
margin_bottom = 77.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 75.0
margin_bottom = 100.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StressTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "Stress"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 15 )

[node name="DemandsQ1" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 37.0
margin_right = 333.0
margin_bottom = 51.0
text = "You have too many things to do."

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 55.0
margin_right = 333.0
margin_bottom = 71.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_D1" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 75.0
margin_right = 333.0
margin_bottom = 106.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="DemandsQ2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 110.0
margin_right = 333.0
margin_bottom = 124.0
text = "You have enough time for yourself."

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 333.0
margin_bottom = 144.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_D2" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 148.0
margin_right = 333.0
margin_bottom = 179.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="DemandsQ3" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 183.0
margin_right = 333.0
margin_bottom = 197.0
text = "You feel under pressure from deadlines."

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 201.0
margin_right = 333.0
margin_bottom = 217.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_D3" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 221.0
margin_right = 333.0
margin_bottom = 252.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="DemandsQ4" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 256.0
margin_right = 333.0
margin_bottom = 270.0
text = "You feel you're in a hurry."

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 274.0
margin_right = 333.0
margin_bottom = 290.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_D4" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer8" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 294.0
margin_right = 333.0
margin_bottom = 325.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="DemandsQ5" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 329.0
margin_right = 333.0
margin_bottom = 360.0
text = "You feel that too many demands are being made on
you."

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 364.0
margin_right = 333.0
margin_bottom = 380.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider_D5" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 384.0
margin_right = 333.0
margin_bottom = 415.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="HBoxContainer11" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 419.0
margin_right = 333.0
margin_bottom = 439.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 92.0
margin_right = 134.0
margin_bottom = 20.0
text = "Back"

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 138.0
margin_right = 188.0
margin_bottom = 20.0
text = "Finish"

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 192.0
margin_right = 240.0
margin_bottom = 20.0
text = "Menu"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider_D1" to="." method="_on_HSlider_D1_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider_D2" to="." method="_on_HSlider_D2_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider_D3" to="." method="_on_HSlider_D3_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer7/HSlider_D4" to="." method="_on_HSlider_D4_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer9/HSlider_D5" to="." method="_on_HSlider_D5_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer11/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer11/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer11/MenuButton" to="." method="_on_MenuButton_pressed"]
